Modified on the new branch

--- a/AndreiPopa/index.html
+++ b/AndreiPopa/index.html
@@ -86,8 +86,8 @@
                 <td>0735996455</td>
             </tr>
 
-
-
+            <h1>Example of Branch
+            </h1>
         </table>
     </div>
 </body>
