--- a/AndreiPopa/more.html
+++ b/AndreiPopa/more.html
@@ -48,7 +48,7 @@
                 and
                 other items. HTML elements are delineated by tags, written using angle brackets. Tags such as and
                 directly introduce content into the page. Other tags such as
-            <p> surround and provide information about document text and may include other tags as sub-elements.
+                surround and provide information about document text and may include other tags as sub-elements.
                 Browsers do
                 not display the HTML tags, but use them to interpret the content of the page.
 
