--- a/AndreiPopa/index.html
+++ b/AndreiPopa/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!-- andrei incearca chestii -->
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>My first form</title>
