Upload table and form

--- a/AndreiPopa/index.html
+++ b/AndreiPopa/index.html
@@ -40,7 +40,7 @@
             <a href="https://www.facebook.com/popa.andrey93"><input type="button" value="MyFacebook"></a>
             <br><br>
 
-            <label for="">Date of birth:</label>
+            <label for="">Date of birth!:</label>
             <input type="date" name="dateofbirth">
 
         </form>
