Moddifed facebook link,change directory name in profile page

--- a/AndreiPopa/index.html
+++ b/AndreiPopa/index.html
@@ -36,12 +36,13 @@
             <input type="numbers" name="phonenumber" placeholder="075xxxxxxx" required>
             <br><br>
 
-            <label for="button">Click on MyFacebook:</label>
-            <a href="https://www.facebook.com/popa.andrey93"><input type="button" value="MyFacebook"></a>
-            <br><br>
+            <label for="facebookLink">FB Link:</label>
+            <input type="text" name="facebookLink" placeholder="https://www.facebook.com/popa.andrey93">
+
 
             <label for="">Date of birth!:</label>
             <input type="date" name="dateofbirth">
+
 
         </form>
     </div>
