--- a/CrisBercea/index.html
+++ b/CrisBercea/index.html
@@ -15,15 +15,13 @@
       <input type="text" id="lastname" name="lastname" /><br />
       <label for="phonenr">Phone number:</label><br />
       <input type="text" id="phonenr" name="phonenr" /><br />
-      <label for="button">Facebook:</label><br />
-      <a href="https://www.facebook.com/cristiana.bercea"
-        ><input type="button" value="my facebook" /></a
-      ><br />
+      <label for="facebook">Facebook link:</label><br />
+      <input type="text" id="facebook" name="facebook" /><br />
       <label for="birthday">Date of birth:</label><br />
       <input type="date" id="birthday" /><br />
     </form>
     <br />
-    <h1>Tabel:</h1>
+    <h1>Table:</h1>
     <table>
       <tr>
         <th>ID</th>
