some attempts to style form

--- a/Vladislav/hardcoded.html
+++ b/Vladislav/hardcoded.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body style="background-color: #e5e5e5;">
-        <div>
+        <div class="dataSheet">
         <h1 class="mainTitle">Profile</h1>
         <img class="profilePic" src="assets/cat.png">
         
