I use CSS to design my static page and table and form

--- a/AndreiPopa/index.html
+++ b/AndreiPopa/index.html
@@ -2,22 +2,17 @@
 <html>
 
 <head>
-    <!-- andrei incearca chestii -->
+
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>My first form</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="stylesheet" href="style.css">
     <script src='main.js'></script>
 </head>
 <style>
-    table,
-    tr,
-    th,
-    td {
-        border: 2px solid black;
-        text-align: center;
-    }
+
 </style>
 
 <body>
@@ -37,7 +32,7 @@
             <br><br>
 
             <label for="facebookLink">FB Link:</label>
-            <input type="text" name="facebookLink" placeholder="https://www.facebook.com/popa.andrey93">
+            <input type="text" name="facebookLink" placeholder="https://www.facebook.com/popa.andrey93"><br>
 
 
             <label for="">Date of birth!:</label>
@@ -49,7 +44,7 @@
     <br><br><br>
     <div>
         <h1>My student table!</h1>
-        <table id="studenttable" style="width: 50%;">
+        <table class="studenttable" style="width: 50%;">
             <tr>
                 <th>ID:</th>
                 <th>First Name:</th>
