fix a form style problem

--- a/AndreiPopa/profile.html
+++ b/AndreiPopa/profile.html
@@ -111,7 +111,7 @@
             Just fill out the form below and we’ll get back to you as soon as possible
             (usually within one business day"</p>
 
-        <form>
+        <form class="asd">
             <label for="name">Name:</label>
             <input type="email" name="email" placeholder="Type name"><br><br>
             <label for="email">Email:</label>
