--- a/emy/index.html
+++ b/emy/index.html
@@ -4,31 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> My Page </title>
+    <link rel="stylesheet" href="style1.css">
 </head>
-<style>
-    table, th, td {
-      border: 3px solid black;
-      border-collapse: collapse;
-      background-color: aqua;
-      
-    }
-    th, td {
-  padding: 15px;
-}
-    label{
-        background-color: brown;
-    }
-    #fname , #lname , #pnumber{
-        color: gold;
-    }
-    </style>
 <body>
     
     <table style="width:100%">
 
         <form>
             <label style="color: cornsilk;" for="fname"><b><i>First Name: </i></b></label><br>
-            <input type="text" id="fname" name="fname" value="Emilian"><br>
+            <input type="text" class="namee" name="fname" value="Emilian"><br>
             <label style="color: cornsilk;" for="lname"><b><i>Last Name:</i> </b></label><br>
             <input type="text" id="lname" name="lname" value="Zula"><br>
             <label style="color: cornsilk;" for="pnumber"><b>Phone Number</b></label><br>
