Added public filles to my pages

--- a/AndreiPopa/nodeJsserverExpress/sites/profile.html
+++ b/AndreiPopa/nodeJsserverExpress/sites/profile.html
@@ -9,7 +9,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleprofile.css">
     <script src='main.js'></script>
 </head>
 
