--- a/Vladislav/Resume/index.html
+++ b/Vladislav/Resume/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <p class="bigTitle">Resume</p>
+        <p class="bigTitle" id="firstElem">Resume</p>
         <div class="profileMain">
             <img src="_assets/Profile Picture.png">
             <p class="headerBig">Bojici Vladislav</p>
@@ -47,6 +47,7 @@
             <p class="headerBig">Foreign Languages</p>
             <img src="_assets/[PH] Foreign Languages Chart.png">
         </div>
+        <script src="./script.js"></script>
     </body> 
 
 </html>
